[package]
name = "card_play"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdk = { path = "../sdk" }
bounded-integer = { version = "0.5.7", features = ["std", "types"] }
once_cell = "1.19.0"
rand = "0.8.5"
rand_distr = "0.4.3"
log = "0.4.20"
anyhow = { version = "1.0.79", features = [] }
lazy_static = "1.4.0"
dotenvy = "0.15.7"
pretty_env_logger = "0.5.0"
