[package]
name = "solitaire_cypher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdk = { path = "../sdk" }
card_play = { path = "../card_play" }
bounded-integer = { version = "0.5.7", features = ["std", "types"] }
rand = "0.8.5"
rand_distr = "0.4.3"
once_cell = "1.19.0"
regex = "1.10.3"
log = "0.4.20"
anyhow = { version = "1.0.79", features = [] }
lazy_static = "1.4.0"
dotenvy = "0.15.7"
pretty_env_logger = "0.5.0"
clap = { version = "4.5.0", features = ["derive"] }
