[package]
name = "solitaire_cypher_cli"
version = "0.1.7"
authors = ["Stephen C Stearns <steve@tomasara.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "CLI for the playing card based cypher created by Bruce Schneier and featured in Neal Stephenson’s Cryptonomicon"
repository = "https://github.com/anotherstevest2/solitaire"
keywords = ["cli", "solitaire", "cypher"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "solitaire_cypher_cli"
path = "src/main.rs"


[dependencies]
card_play = { path = "../card_play", version = "0.1.0" }
solitaire_cypher = { path = "../solitaire_cypher", version = "0.1.0" }
bounded-integer = { version = "0.5.7", features = ["std", "types"] }
rand = "0.8.5"
rand_distr = "0.4.3"
once_cell = "1.19.0"
regex = "1.10.3"
log = "0.4.20"
anyhow = { version = "1.0.79", features = [] }
lazy_static = "1.4.0"
dotenvy = "0.15.7"
pretty_env_logger = "0.5.0"
clap = { version = "4.5.0", features = ["derive"] }
predicates = "3.1.0"
assert_cmd = "2.0.14"